<resources>
    <string name="app_name">Calculator</string>
    <string name="input" />
    <string name="output" />
    <string name="sub">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="sum">+</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="close_br">)</string>
    <string name="open_br">(</string>
    <string name="ac">AC</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="z">z</string>
    <string name="y">y</string>
    <string name="x">x</string>
    <string name="sqrt">√</string>
    <string name="ln">ln</string>
</resources>